<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BattleBuilder</string>
	<string name="army_name">Army Name</string>
	<string name="points">Points</string>
	<string name="remaining">Remaining</string>
	<string name="faction_name">Faction</string>
    <string name="menu_insert">New Army</string>
    <string name="menu_delete">Delete Army</string>
    <string name="point_level">Points: </string>
    <string name="max_casters">Max Casters: </string>
    <string name="deal_damage">Deal Damage </string>
    <string name="remove_damage">Remove Damage </string>
    <string name="column">Column: </string>
    <string name="damage">Damage: </string>
    <string name="finalize_damage">Deal It!</string>
    <string name="remove_all">Clear Damage</string>
    <string name="view_log">View Log</string>
    <string name="play_army">Play Army</string>
    <string name="end_game">End Game</string>
    <string name="restart_game">Restart Game</string>
    <string name="no_damage">No Damage</string>
    <string name="no_amries">No Armies</string>
    <string name="intro_author">By\nAlex Badion</string>
    <string name="intro_disclaimer">Warmachine, Hordes and Privateer Press are Trademark Privateer Press.\nWarmachine, Hordes and all model names and info are copyright Privateer Press all rights reserved.</string>
    <string name="loading_damage">Damage Grids</string>
    <string name="loading">Loading: </string>
</resources>
