<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
  	<TextView android:id="@+id/title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="25dp"
		android:text="@string/app_name"/>
  	<TextView android:id="@+id/author"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="20dp"
		android:text="@string/intro_author"/>
    <TextView android:id="@+id/dislaimer"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="15dp"
		android:text="@string/intro_disclaimer"/>
    <ProgressBar android:id="@+id/load_progress"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:progressDrawable="@+android:drawable/progress_horizontal"
    	android:indeterminateDrawable="@+android:drawable/progress_indeterminate_horizontal"/>
    <TextView android:id="@+id/load_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
</LinearLayout>
